{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 237,
  "lineage": "2cdd3711-a121-1d2c-b2ad-5badd2b9c8c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:vpc/vpc-0f4fe1da7d3241ad5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ea1121fcff107c20",
            "default_route_table_id": "rtb-08daf2226041d161e",
            "default_security_group_id": "sg-05be4bf2844f6273a",
            "dhcp_options_id": "dopt-06ccb9d9cee9df1e4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4fe1da7d3241ad5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08daf2226041d161e",
            "owner_id": "689587120140",
            "tags": {
              "Name": "vpc_main"
            },
            "tags_all": {
              "Name": "vpc_main"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:security-group/sg-015d84eb55689031f",
            "description": "allow traffic from port 80 \u0026 allow all outgoing traffic",
            "egress": [],
            "id": "sg-015d84eb55689031f",
            "ingress": [],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "689587120140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver_sg"
            },
            "tags_all": {
              "Name": "webserver_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4fe1da7d3241ad5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic to internet",
            "from_port": 0,
            "id": "sgrule-207002327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-015d84eb55689031f",
            "security_group_rule_id": "sgr-0618a4d2000aa42da",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.ec2.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_web_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS from Web ELB",
            "from_port": 443,
            "id": "sgrule-1381440385",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-015d84eb55689031f",
            "security_group_rule_id": "sgr-099638b08370aec48",
            "self": false,
            "source_security_group_id": "sg-07148d8c5d7c2701e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.ec2.aws_security_group.webserver_sg",
            "module.elb.aws_security_group.web_elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_web_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP from Web ELB",
            "from_port": 80,
            "id": "sgrule-3039921066",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-015d84eb55689031f",
            "security_group_rule_id": "sgr-0e4e4cfe13e4c2adf",
            "self": false,
            "source_security_group_id": "sg-07148d8c5d7c2701e",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.ec2.aws_security_group.webserver_sg",
            "module.elb.aws_security_group.web_elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/frontend-lb/3fe98daf3c03c455",
            "arn_suffix": "app/frontend-lb/3fe98daf3c03c455",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-lb-1568398001.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/frontend-lb/3fe98daf3c03c455",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07148d8c5d7c2701e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-093150e659e724347"
              },
              {
                "subnet_id": "subnet-0aabfa108dea45684"
              }
            ],
            "subnets": [
              "subnet-093150e659e724347",
              "subnet-0aabfa108dea45684"
            ],
            "vpc_id": "vpc-0f4fe1da7d3241ad5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.elb.aws_security_group.web_elb_sg",
            "module.subnets.aws_subnet.public_subnet_A",
            "module.subnets.aws_subnet.public_subnet_B"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontendListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:listener/app/frontend-lb/3fe98daf3c03c455/209a73d32615702d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/frontendTG/858079a8574bcbf1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:listener/app/frontend-lb/3fe98daf3c03c455/209a73d32615702d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/frontend-lb/3fe98daf3c03c455",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.elb.aws_lb.frontend_lb",
            "module.elb.aws_lb_target_group.frontendTG",
            "module.elb.aws_security_group.web_elb_sg",
            "module.subnets.aws_subnet.public_subnet_A",
            "module.subnets.aws_subnet.public_subnet_B"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontendTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/frontendTG/858079a8574bcbf1",
            "arn_suffix": "targetgroup/frontendTG/858079a8574bcbf1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/frontendTG/858079a8574bcbf1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontendTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4fe1da7d3241ad5"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:security-group/sg-07148d8c5d7c2701e",
            "description": "Allow traffic from the internet \u0026 allow all outgoing traffic to webservers",
            "egress": [],
            "id": "sg-07148d8c5d7c2701e",
            "ingress": [],
            "name": "web_elb_sg",
            "name_prefix": "",
            "owner_id": "689587120140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_elb_sg"
            },
            "tags_all": {
              "Name": "web_elb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4fe1da7d3241ad5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_inbound_webelb_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2822187684",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07148d8c5d7c2701e",
            "security_group_rule_id": "sgr-0e43c3945af36e4c7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.elb.aws_security_group.web_elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_inbound_webelb_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2062651702",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07148d8c5d7c2701e",
            "security_group_rule_id": "sgr-08711d7518ecfdbac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.elb.aws_security_group.web_elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_https_to_web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound HTTPS traffic to web servers",
            "from_port": 443,
            "id": "sgrule-3092380734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07148d8c5d7c2701e",
            "security_group_rule_id": "sgr-0d5c9d1c7aa3f1485",
            "self": false,
            "source_security_group_id": "sg-015d84eb55689031f",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.ec2.aws_security_group.webserver_sg",
            "module.elb.aws_security_group.web_elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_to_web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3235499974",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07148d8c5d7c2701e",
            "security_group_rule_id": "sgr-02414c8e0fe76db98",
            "self": false,
            "source_security_group_id": "sg-015d84eb55689031f",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.ec2.aws_security_group.webserver_sg",
            "module.elb.aws_security_group.web_elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b5cb7af5de20fed",
            "arn": "arn:aws:ec2:us-east-1:689587120140:elastic-ip/eipalloc-05b5cb7af5de20fed",
            "domain": "vpc",
            "id": "eipalloc-05b5cb7af5de20fed",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-45-96-201.compute-1.amazonaws.com",
            "public_ip": "52.45.96.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:internet-gateway/igw-074f8889491950aef",
            "id": "igw-074f8889491950aef",
            "owner_id": "689587120140",
            "tags": {
              "Name": "igw_web"
            },
            "tags_all": {
              "Name": "igw_web"
            },
            "vpc_id": "vpc-0f4fe1da7d3241ad5"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b5cb7af5de20fed",
            "association_id": "eipassoc-00abb0cdaa2e22da5",
            "connectivity_type": "public",
            "id": "nat-0b4a00769e30dcf2c",
            "network_interface_id": "eni-01163097a6f1d6e46",
            "private_ip": "10.0.1.73",
            "public_ip": "52.45.96.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-093150e659e724347"
          },
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.subnets.aws_eip.nat",
            "module.subnets.aws_subnet.public_subnet_A"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00547cbaf1bba3fbd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b4a00769e30dcf2c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00547cbaf1bba3fbd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.subnets.aws_eip.nat",
            "module.subnets.aws_nat_gateway.nat",
            "module.subnets.aws_route_table.rt_private",
            "module.subnets.aws_subnet.public_subnet_A"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-074f8889491950aef",
            "id": "r-rtb-06604639badeb70e71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06604639badeb70e7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.subnets.aws_internet_gateway.igw_web",
            "module.subnets.aws_route_table.rt_public"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:route-table/rtb-00547cbaf1bba3fbd",
            "id": "rtb-00547cbaf1bba3fbd",
            "owner_id": "689587120140",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f4fe1da7d3241ad5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:route-table/rtb-06604639badeb70e7",
            "id": "rtb-06604639badeb70e7",
            "owner_id": "689587120140",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f4fe1da7d3241ad5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_ass_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bde0fb368a65f66",
            "route_table_id": "rtb-00547cbaf1bba3fbd",
            "subnet_id": "subnet-03fead319cf67231a"
          },
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.subnets.aws_route_table.rt_private",
            "module.subnets.aws_subnet.private_subnet_A",
            "module.subnets.aws_subnet.private_subnet_B",
            "module.subnets.aws_subnet.private_subnet_C"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6044c2c57939d5d",
            "route_table_id": "rtb-00547cbaf1bba3fbd",
            "subnet_id": "subnet-0f69807718fad5ee6"
          },
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.subnets.aws_route_table.rt_private",
            "module.subnets.aws_subnet.private_subnet_A",
            "module.subnets.aws_subnet.private_subnet_B",
            "module.subnets.aws_subnet.private_subnet_C"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4c20c0c36d9eaa4",
            "route_table_id": "rtb-00547cbaf1bba3fbd",
            "subnet_id": "subnet-093bb7f35a22a0889"
          },
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.subnets.aws_route_table.rt_private",
            "module.subnets.aws_subnet.private_subnet_A",
            "module.subnets.aws_subnet.private_subnet_B",
            "module.subnets.aws_subnet.private_subnet_C"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_ass_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9c1b5307381ca6d",
            "route_table_id": "rtb-06604639badeb70e7",
            "subnet_id": "subnet-093150e659e724347"
          },
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.subnets.aws_route_table.rt_public",
            "module.subnets.aws_subnet.public_subnet_A",
            "module.subnets.aws_subnet.public_subnet_B"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8cc17d94f2e5cfe",
            "route_table_id": "rtb-06604639badeb70e7",
            "subnet_id": "subnet-0aabfa108dea45684"
          },
          "dependencies": [
            "aws_vpc.vpc_main",
            "module.subnets.aws_route_table.rt_public",
            "module.subnets.aws_subnet.public_subnet_A",
            "module.subnets.aws_subnet.public_subnet_B"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-03fead319cf67231a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fead319cf67231a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_A"
            },
            "tags_all": {
              "Name": "private_subnet_A"
            },
            "vpc_id": "vpc-0f4fe1da7d3241ad5"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-0f69807718fad5ee6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f69807718fad5ee6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_B"
            },
            "tags_all": {
              "Name": "private_subnet_B"
            },
            "vpc_id": "vpc-0f4fe1da7d3241ad5"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-093bb7f35a22a0889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093bb7f35a22a0889",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_C"
            },
            "tags_all": {
              "Name": "private_subnet_C"
            },
            "vpc_id": "vpc-0f4fe1da7d3241ad5"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-093150e659e724347",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093150e659e724347",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_A"
            },
            "tags_all": {
              "Name": "public_subnet_A"
            },
            "vpc_id": "vpc-0f4fe1da7d3241ad5"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-0aabfa108dea45684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aabfa108dea45684",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_B"
            },
            "tags_all": {
              "Name": "public_subnet_B"
            },
            "vpc_id": "vpc-0f4fe1da7d3241ad5"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    }
  ]
}